Remove test data

--- a/server/static/house-price-prediction.html
+++ b/server/static/house-price-prediction.html
@@ -7514,7 +7514,7 @@ a.anchor-link {
 
 <span class="c1"># Read the data</span>
 <span class="n">X</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'./data/train.csv'</span><span class="p">,</span> <span class="n">index_col</span><span class="o">=</span><span class="s1">'Id'</span><span class="p">)</span>
-<span class="n">X_test_full</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'./data/train.csv'</span><span class="p">,</span> <span class="n">index_col</span><span class="o">=</span><span class="s1">'Id'</span><span class="p">)</span>
+<span class="n">X_test_full</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s1">'./data/test.csv'</span><span class="p">,</span> <span class="n">index_col</span><span class="o">=</span><span class="s1">'Id'</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
@@ -8872,7 +8872,7 @@ a.anchor-link {
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=f3735322">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=221fe14b">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -9247,7 +9247,7 @@ a.anchor-link {
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[12]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f1481a0ceb0&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f54938caf10&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -10944,7 +10944,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[28]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f1482d65850&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f5494301f70&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -10976,7 +10976,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[29]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f1482624d60&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f549411f8b0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -11612,7 +11612,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[36]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f1482f4da60&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f54951e3310&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -11644,7 +11644,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[37]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f14829443a0&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f549336a460&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -12111,7 +12111,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[42]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f1481956040&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f5493559370&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -12143,7 +12143,7 @@ Name: BsmtUnfSF, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[43]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;matplotlib.collections.PathCollection at 0x7f14815c2790&gt;</pre>
+<pre>&lt;matplotlib.collections.PathCollection at 0x7f54934ac580&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13006,7 +13006,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[55]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14813da460&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54935674c0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13078,7 +13078,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[58]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f148369bac0&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54958e5be0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13140,7 +13140,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[60]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1483018a60&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f549559c8b0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13187,7 +13187,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[62]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14833af160&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5495565be0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13235,7 +13235,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[64]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f148369d340&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54954b7d00&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13269,7 +13269,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[65]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14838ddf40&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5493573ca0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13303,7 +13303,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[66]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14814f7af0&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5495295be0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13337,7 +13337,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[67]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14812fdb80&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54934e5e80&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13371,7 +13371,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[68]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1482943df0&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5493541e50&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13404,7 +13404,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[69]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f14832d0c10&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5493302520&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13437,7 +13437,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[70]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1483456fd0&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54958370d0&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13470,7 +13470,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[71]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1483501160&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5495986880&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13503,7 +13503,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[72]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1483752c70&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f5494388f70&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -13536,7 +13536,7 @@ Name: PoolArea, dtype: float64</pre>
 <div class="jp-OutputArea-child jp-OutputArea-executeResult">
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[73]:</div>
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain" tabindex="0">
-<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f1482ccca90&gt;</pre>
+<pre>&lt;seaborn.axisgrid.FacetGrid at 0x7f54950fc700&gt;</pre>
 </div>
 </div>
 <div class="jp-OutputArea-child">
@@ -14767,7 +14767,7 @@ Length: 181, dtype: float32
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=bd94ffae">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell" id="cell-id=aaf3237a">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
